--- a/app/views/signin.erb
+++ b/app/views/signin.erb
@@ -1,9 +1,9 @@
 <div align="center">
   <h2>Login</h2>
   <form action='/signin' method='post'>
-    <input type='text' name='username' placeholder='Username'><br>
+    <input type='text' name='email' placeholder='Email'><br>
     <input type='password' name='password' placeholder='Password'><br />
     <input type='submit' value='Submit'>
   </form>
-    <a href="#signup" class="button">Signup</a>
+    <a href="/signup" class="button">Signup</a>
 </div>
