--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -4,7 +4,8 @@
     Alert:<%= flash[:alert] %>
   <% end %>
   <form action='/signup' method='post'>
-    <input type='text' name='username' placeholder='Username'><br>
+    <input type='text' name='email' placeholder='Email'><br>
+    <input type='text' name='screenname' placeholder='Screen Name'><br>
     <input type='password' name='password' placeholder='Password'><br />
     <input type='password' name='password_conf' placeholder='Verify password'><br />
     <input type='submit' value='Submit'>
