--- a/app/views/_header.erb
+++ b/app/views/_header.erb
@@ -1,5 +1,5 @@
     <br> <a href='/stats'>See your stats </a> </br> 
-    <br> <a href='/newgame'>Start a new game </a> </br> 
+    <br> <a href='/players'>Start a new game </a> </br> 
     <br> <a href='/editprofile'>Edit your profile </a> </br> 
     <br> <a href='/stats'>See your stats </a> </br> 
     <br> <a href='/'>Home</a> </br>
