--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,16 @@
 <div align="center">
   <h2>Welcome! </h2>
     You are signed in as <%= @user.name %><br /><br />
-    
-
+    <row>
+	<% @user.matches.each do |match| %>
+	<div class="columns large-3">
+			<% if match.player_1_id == @user.user_id %>
+			<% opponent_id = match.player_2_id %>
+			<% else %>
+			<% opponent_id = match.player_1_id %>
+			<% end %>
+		<h4>GAME WITH <%= RPS::DBI.dbi.get_user_by_id(opponent_id).name %></h4>
+		<% end %>
+	</div>
 
 </div>
