--- a/app/views/play.erb
+++ b/app/views/play.erb
@@ -1,1 +1,16 @@
-<p>Hello <%= @user.name %>! You are playing round <%= @game_info[:round_id] %> of match <%= @game_info[:match_id]%>.</p>
+<div class="row">
+	<div class="columns large-12">
+		<p>Hello <%= @user.name %>! You are playing round <%= @game_info[:round_id] %> of match <%= @game_info[:match_id]%>.</p>
+		<div class="row">
+		<form class="columns large-3" method="post" action="/play/<%= @game_info[:match_id] %>/<%= @game_info[:round_id] %>/r">
+			<h1><input type="submit" value="ROCK" class="button"></h1>
+		</form>
+		<form class="columns large-3" method="post" action="/play/<%= @game_info[:match_id] %>/<%= @game_info[:round_id] %>/p">
+			<h1><input type="submit" value="PAPER" class="button"></h1>
+		</form>
+		<form class="columns large-3 end" method="post" action="/play/<%= @game_info[:match_id] %>/<%= @game_info[:round_id] %>/s">
+			<h1><input type="submit" value="SCISSORS" class="button"></h1>
+		</form>			
+		</div>
+	</div>
+</div>
