--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,12 +6,13 @@
     <form class="row" method = "get" action="/play/<%= match[:match_id] %>/<%= match[:current_round] %>">
 		<p>MATCH NUMBER: <%= match[:match_id] %></p>
 		<p>OPPONENT: <%= match[:opponent_name] %>, <%= match[:opponent_id] %></p>
-		<p>MATCH OVER? <%= match[:completed] %></p>
 		<a href="/play/"><p>PLAY ROUND # <%= match[:current_round] %> NOW! </p></a>
 		<p>CURRENT WINS: <%= match[:current_wins] %> </p>
 		<p>CURRENT LOSSES: <%= match[:current_losses] %> </p>
 		<p>CURRENT TIES: <%= match[:current_ties] %> </p>
-		<% if match[:already_played] %>
+		<% if  match[:completed] == true %>
+		<p>GAME OVER!</p>
+		<% elsif match[:already_played] == true %>
 		<p>You've already played this round.  Waiting for your opponent!</p>
 		<% else %>
 		<input type="submit" class="button" value = "PLAY THIS MATCH!">
