--- a/app/views/editprofile.erb
+++ b/app/views/editprofile.erb
@@ -2,6 +2,7 @@
   <h2>Update your password here</h2>
   <form action='/editprofile' method='post'>
     <input type='password' name='password' placeholder='Change Your Password'><br />
+    <input type='password' name='password_conf' placeholder='Enter New Password Again'><br />
     <input type='submit' value='Submit'>
   </form>
     <a href="/editprofile" class="button">Click here</a>
