--- a/app/views/players.erb
+++ b/app/views/players.erb
@@ -1,15 +1,14 @@
-<center>
-  <h2>Players</h2>
-  <table>
+  <h2>Challenge another player!</h2>
+<div class="columns large-6 large-center">
   
   <% @all_users.each do |user| %>
-    <tr>
-      <td><%= user[:user_id] %></td>
-      <td><%= user[:name] %></td>
-      <td><a href='/newmatch/<%= user[:user_id] %>'>User's Name</a></td>
-    </tr>
+    <a href='/newmatch/<%= user[:user_id] %>'>
+    <div class="row panel">
+      <%= user[:user_id] %>
+      <%= user[:name] %>
+    </div>
+    </a>
   <% end %>
 
-  </table><br /><br />
 
-</center>
+</div>
