--- a/app/views/signin.erb
+++ b/app/views/signin.erb
@@ -3,7 +3,7 @@
   <form action='/signin' method='post'>
     <input type='text' name='email' placeholder='Email'><br>
     <input type='password' name='password' placeholder='Password'><br />
-    <input type='submit' value='Submit'>
+    <input type='submit' class = "button" value='Submit'>
   </form>
     <a href="/signup" class="button">Signup</a>
 </div>
