--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,34 +1,79 @@
 <br>
 <div class="row">
+	<!-- FIRST: List current games... -->
 	<% @match_info.each do |match| %>
-	<div class="columns large-12 panel">
-    <form class="row" method = "get" action="/play/<%= match[:match_id] %>/<%= match[:current_round] %>">
-	<div class="columns large-12">
-		<div class="row">
-		<p class = "columns large-6">OPPONENT: <%= match[:opponent_name] %></p>
+		<% if match[:completed] == false && match[:already_played] == false %>
+	    <form class="row" method = "get" action="/play/<%= match[:match_id] %>/<%= match[:current_round] %>">
+		<div class="columns large-12 panel">
+			<div class="row">
+			<p class = "columns large-4">OPPONENT: <%= match[:opponent_name] %></p>
+			<input type="submit" class="button" value = "PLAY THIS MATCH!">
+			</div>
 
-		<% if  match[:completed] == true  && match[:current_wins] >= 3%>
-		<em>GAME OVER! YOU WON!</em>
-		<% elsif  match[:completed] == true  && match[:current_wins] <= 3%>
-		<em>GAME OVER! YOU LOST!</em>
-		<% elsif match[:already_played] == true %>
-		<em>You've already played this round.  Waiting for your opponent!</em>
-		<% else %>
-		<input type="submit" class="button" value = "PLAY THIS MATCH!">
-		<% end %>
-		</div>
-
-		<div class="row">
-			<div class="columns small-10 small-centered">
-			<ul class="small-block-grid-3">
-				<li class="panel callout">WINS: <%= match[:current_wins] %> </li>
-				<li class="panel callout">LOSSES: <%= match[:current_losses] %> </li>
-				<li class="panel callout">TIES: <%= match[:current_ties] %> </li>
-			</ul>
+			<div class="row">
+				<div class="columns small-10 small-centered">
+				<ul class="small-block-grid-3">
+					<li class="panel callout">WINS: <%= match[:current_wins] %> </li>
+					<li class="panel callout">LOSSES: <%= match[:current_losses] %> </li>
+					<li class="panel callout">TIES: <%= match[:current_ties] %> </li>
+				</ul>
+				</div>
 			</div>
 		</div>
-	</div>
-	</form>
-	</div>
+		</form>
+		<% end %>
+	<% end %>
+
+	<!-- SECOND LIST WAITING GAMES -->
+	<% @match_info.each do |match| %>
+		<% if match[:completed] == false && match[:already_played] == true %>
+		<div class="row">
+		<div class="columns large-12 panel">
+			<div class="row">
+			<p class = "columns large-4">OPPONENT: <%= match[:opponent_name] %></p>
+			<em>You've already played this round.  Waiting for your opponent!</em>
+			</div>
+
+			<div class="row">
+				<div class="columns small-10 small-centered">
+				<ul class="small-block-grid-3">
+					<li class="panel callout">WINS: <%= match[:current_wins] %> </li>
+					<li class="panel callout">LOSSES: <%= match[:current_losses] %> </li>
+					<li class="panel callout">TIES: <%= match[:current_ties] %> </li>
+				</ul>
+				</div>
+			</div>
+		</div>
+		</div>
+		<% end %>
+	<% end %>
+		
+	<!-- THIRD LIST COMPLETED GAMES -->
+	<% @match_info.each do |match| %>
+		<% if match[:completed] == true %>
+		<div class="row">
+		<div class="columns large-12 panel">
+			<div class="row">
+			<p class = "columns large-4">OPPONENT: <%= match[:opponent_name] %></p>
+
+			<% if match[:current_wins] >= 3 %>
+			<em>GAME OVER! YOU WON!</em>
+			<% elsif match[:current_wins] <= 3 %>
+			<em>GAME OVER! YOU LOST!</em>
+			<% end %>
+			</div>
+
+			<div class="row">
+				<div class="columns small-10 small-centered">
+				<ul class="small-block-grid-3">
+					<li class="panel callout">WINS: <%= match[:current_wins] %> </li>
+					<li class="panel callout">LOSSES: <%= match[:current_losses] %> </li>
+					<li class="panel callout">TIES: <%= match[:current_ties] %> </li>
+				</ul>
+				</div>
+			</div>
+		</div>
+		</div>
+		<% end %>
 	<% end %>
 </div>
