--- a/app/views/signin.erb
+++ b/app/views/signin.erb
@@ -1,9 +1,12 @@
 <div align="center">
-  <h2>Login</h2>
+  <h2>Have an Account? Sign In</h2>
   <form action='/signin' method='post'>
     <input type='text' name='email' placeholder='Email'><br>
     <input type='password' name='password' placeholder='Password'><br />
     <input type='submit' class = "button" value='Submit'>
   </form>
-    <a href="/signup" class="button">Signup</a>
+  <hr>
+  <h2>Need an Account?</h2> 
+  <h4>Join the RPS Community!</h4>
+  <a href="/signup" class="button">Signup</a>
 </div>
