--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -8,6 +8,6 @@
     <input type='text' name='screenname' placeholder='Screen Name'><br>
     <input type='password' name='password' placeholder='Password'><br />
     <input type='password' name='password_conf' placeholder='Verify password'><br />
-    <input type='submit' value='Submit'>
+    <input type='submit' class="button" value='Submit'>
   </form>
 </div>
