--- a/app/views/signin.erb
+++ b/app/views/signin.erb
@@ -1,9 +1,9 @@
 <div align="center">
   <h2>Have an Account? Sign In</h2>
   <form action='/signin' method='post'>
-    <input type='text' name='email' placeholder='Email'><br>
-    <input type='password' name='password' placeholder='Password'><br />
-    <input type='submit' class = "button" value='Submit'>
+    <input required="required" name='email' type="email" placeholder='Email'><br>
+    <input type='password' required="required" name='password' placeholder='Password'><br />
+    <input type='submit' class = "button" required="required" value='Submit'>
   </form>
   <hr>
   <h2>Need an Account?</h2> 
