--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -4,10 +4,12 @@
     Alert:<%= flash[:alert] %>
   <% end %>
   <form action='/signup' method='post'>
-    <input type='text' name='email' placeholder='Email'><br>
-    <input type='text' name='screenname' placeholder='Screen Name'><br>
-    <input type='password' name='password' placeholder='Password'><br />
-    <input type='password' name='password_conf' placeholder='Verify password'><br />
+    <input type='email' name='email' required = "required" placeholder='Email'><br>
+    <input type='text' name='screenname' placeholder='Screen Name' required = "required"><br>
+    <input type='password' name='password' placeholder='Password' required = "required"><br />
+    <input type='password' name='password_conf' placeholder='Verify password' required = "required"><br />
     <input type='submit' class="button" value='Submit'>
   </form>
+  <br>
+  <p>If you want to add an image to your profile, please go to Account Settings after you sign up.</p>
 </div>
