--- a/app/views/players.erb
+++ b/app/views/players.erb
@@ -1,12 +1,12 @@
   <h2>Challenge another player!</h2>
-<div class="columns large-6 large-center">
-  
+<div class="columns large-12">
+  <%  @all_users.delete_if { |user| user[:user_id] == @user.user_id} %>
   <% @all_users.each do |user| %>
     <a href='/newmatch/<%= user[:user_id] %>'>
     <div class="row panel">
-      <%= user[:user_id] %>
       <%= user[:name] %>
     </div>
+    <br>
     </a>
   <% end %>
 
