--- a/app/views/play.erb
+++ b/app/views/play.erb
@@ -18,28 +18,25 @@
 	</div>
 </div>
 
-<!-- SET VARIABLES NEEDED FOR LISTING PRIOR ROUNDS IN THIS MATCH -->
-<% this_match = @user.matches.find {|match| match.match_id == @game_info[:match_id] }%>
-<% player_position = 1 if this_match.player_1_id == @user.user_id %>
-<% player_position = 2 if this_match.player_2_id == @user.user_id %>
-<% this_match_rounds = this_match.rounds.delete_if { |round| round.round_id == @game_info[:round_id] } %>
+<!-- MATCH HISTORY -->
 
-<% this_match_rounds.each do |round| %>
+<% @history.each do |round| %>
+
 	ROUND: <%= round.round_id %>
 	YOUR MOVE: 
-	<% if player_position == 1 %>
+	<% if @game_info[:player_position] == 1 %>
 		<%= round.player_1_move %>
 	<% else %>
 		<%= round.player_2_move %>
 	<% end %>
 	YOUR OPPONENT'S MOVE:
-	<% if player_position == 1 %>
+	<% if @game_info[:player_position] == 1 %>
 		<%= round.player_2_move %>
 	<% else %>
 		<%= round.player_1_move %>
 	<% end %>	
 	RESULT:
-	<% if round.result == player_position %>
+	<% if round.result == @game_info[:player_position] %>
 		YOU WON!
 	<% else %>
 		YOU LOST!
