--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -36,6 +36,7 @@
 			<div class="row">
 			<p class = "columns large-4">OPPONENT: <%= match[:opponent_name] %></p>
 			<em>You've already played this round.  Waiting for your opponent!</em>
+			<a href="/view/<%= match[:match_id]%>/<%= match[:opponent_id]%>"><button>VIEW MATCH HISTORY</button></a>
 			</div>
 
 			<div class="row">
@@ -65,6 +66,7 @@
 			<% elsif match[:current_wins] <= 3 %>
 			<em>GAME OVER! YOU LOST!</em>
 			<% end %>
+			<a href="/view/<%= match[:match_id]%>/<%= match[:opponent_id]%>"><button>VIEW MATCH HISTORY</button></a>
 			</div>
 
 			<div class="row">
