updated play buttons

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,7 @@
 		<div class="columns large-12 panel">
 			<div class="row">
 			<p class = "columns large-4">OPPONENT: <%= match[:opponent_name] %></p>
-			<input type="submit" class="button" value = "PLAY THIS MATCH!">
+			<input type="submit" class="button success" value = "PLAY THIS MATCH!">
 			</div>
 
 			<div class="row">
