changed view to only require match_id in bar

--- a/app/views/_nav.erb
+++ b/app/views/_nav.erb
@@ -9,7 +9,7 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class = "active"><a href="/">PLAY!</a></li>
+      <li class = "active"><a href="/">HOME</a></li>
       <li><a href="/players">New Match</a></li>
       <li><a href="/stats">Your Stats</a></li>
       <li><a href="/editprofile">Account Settings</a></li>
