--- a/app/views/feedback.erb
+++ b/app/views/feedback.erb
@@ -24,8 +24,10 @@
 </div>
 
 <br>
-<a href="/players"><button class="button expand">START A NEW MATCH!</button> </a>
-<br>
 <a href="/"><button class = "button expand">RETURN TO HOME SCREEN</button></a>
+<br>
+<a href="/view/<%= @match_id %>"><button class = "button expand">VIEW HISTORY OF THIS MATCH</button></a>
+<br>
+<a href="/players"><button class="button expand">START A NEW MATCH!</button> </a>
 <br>
 <a href="/stats"><button class = "button expand">VIEW YOUR STATS</button></a>
