--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,8 +10,7 @@
 	    <form class="row" method = "get" action="/play/<%= match[:match_id] %>/<%= match[:current_round] %>">
 		<div class="columns large-12 panel">
 			<div class="row">
-			<p class = "columns large-4">OPPONENT: <%= match[:opponent_name] %></p>
-			<input type="submit" class="button success" value = "PLAY THIS MATCH!">
+			<p class = "small-10 small-centered columns">OPPONENT: <%= match[:opponent_name] %></p>
 			</div>
 
 			<div class="row">
@@ -21,6 +20,11 @@
 					<li class="panel callout">LOSSES: <%= match[:current_losses] %> </li>
 					<li class="panel callout">TIES: <%= match[:current_ties] %> </li>
 				</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="columns small-10 small-centered">
+				<input type="submit" class="button success expand" value = "PLAY THIS MATCH!">
 				</div>
 			</div>
 		</div>
@@ -34,9 +38,7 @@
 		<div class="row">
 		<div class="columns large-12 panel">
 			<div class="row">
-			<p class = "columns large-4">OPPONENT: <%= match[:opponent_name] %></p>
-			<em>You've already played this round.  Waiting for your opponent!</em>
-			<a href="/view/<%= match[:match_id]%>/<%= match[:opponent_id]%>"><button>VIEW MATCH HISTORY</button></a>
+			<p class = "small-10 small-centered columns">OPPONENT: <%= match[:opponent_name] %><br><em>You've already played this round.  Waiting for your opponent!</em></p>
 			</div>
 
 			<div class="row">
@@ -46,6 +48,11 @@
 					<li class="panel callout">LOSSES: <%= match[:current_losses] %> </li>
 					<li class="panel callout">TIES: <%= match[:current_ties] %> </li>
 				</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="columns small-10 small-centered">
+					<a href="/view/<%= match[:match_id]%>"><button class="expand">VIEW MATCH HISTORY</button></a>
 				</div>
 			</div>
 		</div>
@@ -59,14 +66,13 @@
 		<div class="row">
 		<div class="columns large-12 panel">
 			<div class="row">
-			<p class = "columns large-4">OPPONENT: <%= match[:opponent_name] %></p>
+			<p class = "columns small-10 small-centered">OPPONENT: <%= match[:opponent_name] %><br>
 
 			<% if match[:current_wins] >= 3 %>
 			<em>GAME OVER! YOU WON!</em>
 			<% elsif match[:current_wins] <= 3 %>
 			<em>GAME OVER! YOU LOST!</em>
-			<% end %>
-			<a href="/view/<%= match[:match_id]%>/<%= match[:opponent_id]%>"><button>VIEW MATCH HISTORY</button></a>
+			<% end %></p>
 			</div>
 
 			<div class="row">
@@ -78,6 +84,11 @@
 				</ul>
 				</div>
 			</div>
+			<div class="row">
+				<div class="columns small-10 small-centered">
+					<a href="/view/<%= match[:match_id]%>"><button class="expand">VIEW MATCH HISTORY</button></a>
+				</div>
+			</div>			
 		</div>
 		</div>
 		<% end %>
