--- a/app/views/view.erb
+++ b/app/views/view.erb
@@ -1,4 +1,4 @@
 <h2>Viewing Match History</h2>
-<h4>Opponent: <%= @opponent.name %> </h4>
+<h4>Opponent: <%= @opponent %> </h4>
 
 <%= erb :_matchhistory %>
