--- a/app/views/view.erb
+++ b/app/views/view.erb
@@ -1,6 +1,6 @@
 <h2>Viewing Match History</h2>
 <h4>Opponent: <%= @opponent %> </h4>
 <% if @history.any? {|r| r[:your_move].nil? } %>
-	<a href="/play/<%= @match_id %>/<%= @history.length %>"><button>Play this game now!</button></a>
+	<a href="/play/<%= @match_id %>/<%= @history.length %>"><button class="success expand">Play this game now!</button></a>
 <% end %>
 <%= erb :_matchhistory %>
